starstream-compiler/src/parser/definition/snapshots/starstream_compiler__parser__definition__abi__tests__abi_empty.snap
---
source: starstream-compiler/src/parser/definition/abi.rs
description: "Code:\n\nabi Events {}"
---
AbiDef {
    name: Identifier {
        name: "Events",
        span: Some(
            4..10,
        ),
    },
    parts: [],
}
