starstream-compiler/src/parser/definition/snapshots/starstream_compiler__parser__definition__abi__tests__abi_event_no_params.snap
---
source: starstream-compiler/src/parser/definition/abi.rs
description: "Code:\n\nabi Events {\n    event Ping();\n}\n"
---
AbiDef {
    name: Identifier {
        name: "Events",
        span: 4..10,
    },
    parts: [
        Event(
            EventDef {
                name: Identifier {
                    name: "Ping",
                    span: 23..27,
                },
                params: [],
                span: 17..31,
            },
        ),
    ],
}
