starstream-compiler/src/parser/definition/snapshots/starstream_compiler__parser__definition__abi__tests__abi_mixed_events_and_methods.snap
---
source: starstream-compiler/src/parser/definition/abi.rs
description: "Code:\n\nabi TokenAbi {\n    event Transfer(sender: i64, to: i64, amount: i64);\n    fn transfer(amount: i64) -> bool;\n    fn balance() -> i64;\n}\n"
---
AbiDef {
    name: Identifier {
        name: "TokenAbi",
        span: 4..12,
    },
    parts: [
        Event(
            EventDef {
                name: Identifier {
                    name: "Transfer",
                    span: 25..33,
                },
                params: [
                    FunctionParam {
                        public: false,
                        name: Identifier {
                            name: "sender",
                            span: 34..40,
                        },
                        ty: Named {
                            name: [
                                Identifier {
                                    name: "i64",
                                    span: 42..45,
                                },
                            ],
                            generics: [],
                        },
                    },
                    FunctionParam {
                        public: false,
                        name: Identifier {
                            name: "to",
                            span: 47..49,
                        },
                        ty: Named {
                            name: [
                                Identifier {
                                    name: "i64",
                                    span: 51..54,
                                },
                            ],
                            generics: [],
                        },
                    },
                    FunctionParam {
                        public: false,
                        name: Identifier {
                            name: "amount",
                            span: 56..62,
                        },
                        ty: Named {
                            name: [
                                Identifier {
                                    name: "i64",
                                    span: 64..67,
                                },
                            ],
                            generics: [],
                        },
                    },
                ],
                span: 19..74,
            },
        ),
        FnDecl(
            AbiMethodDecl {
                name: Identifier {
                    name: "transfer",
                    span: 77..85,
                },
                params: [
                    FunctionParam {
                        public: false,
                        name: Identifier {
                            name: "amount",
                            span: 86..92,
                        },
                        ty: Named {
                            name: [
                                Identifier {
                                    name: "i64",
                                    span: 94..97,
                                },
                            ],
                            generics: [],
                        },
                    },
                ],
                return_type: Some(
                    Named {
                        name: [
                            Identifier {
                                name: "bool",
                                span: 102..106,
                            },
                        ],
                        generics: [],
                    },
                ),
                span: 74..112,
            },
        ),
        FnDecl(
            AbiMethodDecl {
                name: Identifier {
                    name: "balance",
                    span: 115..122,
                },
                params: [],
                return_type: Some(
                    Named {
                        name: [
                            Identifier {
                                name: "i64",
                                span: 128..131,
                            },
                        ],
                        generics: [],
                    },
                ),
                span: 112..133,
            },
        ),
    ],
}
