starstream-compiler/src/parser/definition/snapshots/starstream_compiler__parser__definition__abi__tests__abi_multiple_events.snap
---
source: starstream-compiler/src/parser/definition/abi.rs
description: "Code:\n\nabi Events {\n    event Transfer(sender: i64, to: i64, amount: i64);\n    event Log(message: i64);\n}\n"
---
AbiDef {
    name: Identifier {
        name: "Events",
        span: 4..10,
    },
    parts: [
        Event(
            EventDef {
                name: Identifier {
                    name: "Transfer",
                    span: 23..31,
                },
                params: [
                    FunctionParam {
                        public: false,
                        name: Identifier {
                            name: "sender",
                            span: 32..38,
                        },
                        ty: Named {
                            name: [
                                Identifier {
                                    name: "i64",
                                    span: 40..43,
                                },
                            ],
                            generics: [],
                        },
                    },
                    FunctionParam {
                        public: false,
                        name: Identifier {
                            name: "to",
                            span: 45..47,
                        },
                        ty: Named {
                            name: [
                                Identifier {
                                    name: "i64",
                                    span: 49..52,
                                },
                            ],
                            generics: [],
                        },
                    },
                    FunctionParam {
                        public: false,
                        name: Identifier {
                            name: "amount",
                            span: 54..60,
                        },
                        ty: Named {
                            name: [
                                Identifier {
                                    name: "i64",
                                    span: 62..65,
                                },
                            ],
                            generics: [],
                        },
                    },
                ],
                span: 17..72,
            },
        ),
        Event(
            EventDef {
                name: Identifier {
                    name: "Log",
                    span: 78..81,
                },
                params: [
                    FunctionParam {
                        public: false,
                        name: Identifier {
                            name: "message",
                            span: 82..89,
                        },
                        ty: Named {
                            name: [
                                Identifier {
                                    name: "i64",
                                    span: 91..94,
                                },
                            ],
                            generics: [],
                        },
                    },
                ],
                span: 72..97,
            },
        ),
    ],
}
